got minmax kinda working, with some alpha beta pruning

--- a/src/style.scss
+++ b/src/style.scss
@@ -30,6 +30,7 @@ body {
     width: max(2em, 50px);
     height: max(2em, 50px);
     box-shadow: inset 0.2em 0.2em 0.4em rgb(175, 175, 175);
+    padding: 0;
 
 }
 
